fix: remove horizontal scroll

--- a/static/styles.css
+++ b/static/styles.css
@@ -200,6 +200,7 @@ form {
 select {
   font-size: var(--font-size);
   width: 100%;
+  overflow: hidden;
 }
 
 label {
